# gpuvac

./: ChangeLog.md  README.md  gpuvac.cabal  stack.yaml
app/prof/: Main.hs  Sim.hs
cmd/prof/: Main.hs  Sim.hs
d23cylindrical/accelerate/: Advect.hs  Geometry.hs  Integration.hs  Limits.hs  MHD.hs  Main.hs  Sim.hs  Types.hs  advect.hs  fluid.hs  limits.hs  loop.hs  mhd.hs  muscl.hs  physics.hs  record.hs  test.hs  types.hs
lib/VAC/Core/: Advect.hs  Geometry.hs  Integration.hs  Limits.hs  Slicing.hs  Types.hs
lib/VAC/Physics/: MHD.hs
src/VAC/Core/: Geometry.hs  Integration.hs  Limits.hs
src/VAC/Physics/: MHD.hs
