name:                gpuvac
version:             0.1.0.0
synopsis:            Accelerated Advection Code
-- description:
homepage:            https://github.com/generalfusion/gpuvac
license:             Apache-2.0
author:              Jonathan Fraser
maintainer:          jonathan.fraser@generalfusion.com
copyright:           GeneralFusion Inc
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      lib
  build-depends:
          base                            >= 4.10 && < 4.12
        , accelerate
        , lens
        , linear
        , linear-accelerate

  exposed-modules:
        VAC.Core.Advect
        VAC.Core.Geometry
        VAC.Core.Integration
        VAC.Core.Limits
        VAC.Core.Types
        VAC.Physics.MHD

  -- other-modules:

  default-language:
        Haskell2010


Executable prof
  hs-source-dirs:       app/prof
  Main-is:              Main.hs
  other-modules:        Sim

  ghc-options:
        -Wall
        -threaded
        -eventlog
        -rtsopts
        -with-rtsopts=-n2M
        -with-rtsopts=-A64M
        -with-rtsopts=-qg

  ghc-prof-options:
        -auto-all

  build-depends:
          base                            >= 4.10 && < 4.12
        , accelerate                      >= 1.1 && < 1.4
        , gpuvac
        , accelerate-llvm-ptx             >= 1.1 && < 1.4
        , accelerate-llvm-native          >= 1.1 && < 1.4
        , linear-accelerate               >= 0.5 && < 0.7

  default-language:    Haskell2010

-- vim: nospell
